namespace Travyle.Api.Models;

public class User
{
    public Guid Id { get; set; } = Guid.NewGuid();
    public string FirebaseUid { get; set; } = string.Empty;
    public string Email { get; set; } = string.Empty;
    public string FullName { get; set; } = string.Empty;
    public string Role { get; set; } = "Traveler";
    public DateTime CreatedAt { get; set; } = DateTime.UtcNow;
}